# nlpie

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build.rs  main.py  pyproject.toml
.github/workflows/: ci.yml
benches/: test_benchmarks.py
docs/modules/: metrics.md  normalization.md  quality.md
nlpie_core/: Cargo.toml  pyproject.toml  tests.rs
nlpie_core/src/: lib.rs
nlpie_core/src/embeddings/: mod.rs
nlpie_core/src/embeddings/normalization/: README.md  centering.rs  error.rs  mod.rs  preprocessor.rs  standardization.rs  utils.rs  whitening.rs
python/examples/: normalization.ipynb  pipeline.ipynb  pipeline_with_real_embeddings.ipynb  task_embeddings_report.html  task_embeddings_report.json  task_embeddings_report.md
python/metrics/: projection.py  quality.py  retrieval.py
python/nlpie/: __init__.py  __init__.pyi  _api.py  _dashboard.py  _errors.py  _kpi.py  _nlpie_core.pyi  _similarity.py  _types.py  config.py  dashboard.py  py.typed  thresholds.py
python/nlpie/backends/: __init__.py  base.py  plotly.py
python/nlpie/dashboard/: __init__.py  builder.py  comparison.py
python/nlpie/export/: __init__.py  base.py  html.py  json.py  markdown.py
python/nlpie/interpret/: __init__.py  base.py  clustering.py  geometry.py  hubness.py  intrinsic.py  projection.py  registry.py  retrieval.py  story.py
python/nlpie/metrics/: __init__.py  projection.py  quality.py  retrieval.py
src/: errors.rs  lib.rs
src/bindings/: metrics.rs  normalization.rs
src/core/: mod.rs
src/core/metrics/: mod.rs
src/core/metrics/basic/: mod.rs
src/core/metrics/clustering/: labels.rs  mod.rs  quality.rs
src/core/metrics/geometry/: anisotropy.rs  hubness.rs  mod.rs
src/core/metrics/projection/: mod.rs  trustworthiness.rs
src/core/metrics/retrieval/: ranking.rs
src/core/normalization/: centering.rs  mod.rs  preprocessor.rs  standardization.rs  utils.rs  whitening.rs
tests/: test_comparison.py  test_core.rs  test_export.py  test_hubness_explanation.py  test_interpret.py  test_metrics.py  test_normalization.py  test_plotting.py  test_projection_metrics.py  test_quality_report.py  test_retrieval_metrics.py
