[package]
name = "nlpie_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "_nlpie_core"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["dep:pyo3", "pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.28.3", optional = true }
ndarray = "0.17.2"
ndarray-linalg = "0.18.1"
thiserror = "2.0.18"
