[package]
name = "nlpie_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "_nlpie_core"
crate-type = ["cdylib", "rlib"]

[features]
extension-module = ["dep:pyo3", "pyo3/extension-module", "dep:numpy"]
# BLAS/LAPACK backend fallback: compiles OpenBLAS from source and links it
# statically, so no system-level BLAS installation is required. Use when the
# default system linkage fails (e.g. Windows, or Linux without libopenblas-dev).
# Requires a C/Fortran toolchain; the first build is slow.
openblas-static = ["ndarray-linalg/openblas-static"]

[dependencies]
pyo3 = { version = "0.28.3", optional = true }
ndarray = "0.17.2"
ndarray-linalg = "0.18.1"
numpy = { version = "0.28", optional = true }
rayon = "1.10"
thiserror = "2.0.18"
