[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "nlpie"
version = "0.1.0"
description = "A high-performance NLP library for evaluation tasks."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "maturin>=1.14.1",
    "numpy>=2.5.1",
    "pyarrow>=25.0.0",
    "pytest>=9.1.1",
]

[project.optional-dependencies]
plotting = ["plotly>=5.18"]
dev = ["jupyter>=1.1"]

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "nlpie._nlpie_core"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
